v19.1/designer/interfaces/GC.Spread.Sheets.Designer.ICommand.md
# Interface: ICommand

[Sheets](../modules/GC.Spread.Sheets.md).[Designer](../modules/GC.Spread.Sheets.Designer.md).ICommand

## Table of contents

### Properties

- [bigButton](GC.Spread.Sheets.Designer.ICommand.md#bigbutton)
- [comboHeight](GC.Spread.Sheets.Designer.ICommand.md#comboheight)
- [comboWidth](GC.Spread.Sheets.Designer.ICommand.md#combowidth)
- [commandMap](GC.Spread.Sheets.Designer.ICommand.md#commandmap)
- [commandName](GC.Spread.Sheets.Designer.ICommand.md#commandname)
- [commandOptions](GC.Spread.Sheets.Designer.ICommand.md#commandoptions)
- [direction](GC.Spread.Sheets.Designer.ICommand.md#direction)
- [dropdownList](GC.Spread.Sheets.Designer.ICommand.md#dropdownlist)
- [dropdownMaxHeight](GC.Spread.Sheets.Designer.ICommand.md#dropdownmaxheight)
- [dropdownMaxWidth](GC.Spread.Sheets.Designer.ICommand.md#dropdownmaxwidth)
- [enableContext](GC.Spread.Sheets.Designer.ICommand.md#enablecontext)
- [group](GC.Spread.Sheets.Designer.ICommand.md#group)
- [hidden](GC.Spread.Sheets.Designer.ICommand.md#hidden)
- [iconClass](GC.Spread.Sheets.Designer.ICommand.md#iconclass)
- [iconHeight](GC.Spread.Sheets.Designer.ICommand.md#iconheight)
- [iconWidth](GC.Spread.Sheets.Designer.ICommand.md#iconwidth)
- [isGroupItem](GC.Spread.Sheets.Designer.ICommand.md#isgroupitem)
- [keepFocusInSpread](GC.Spread.Sheets.Designer.ICommand.md#keepfocusinspread)
- [listContent](GC.Spread.Sheets.Designer.ICommand.md#listcontent)
- [maxHeight](GC.Spread.Sheets.Designer.ICommand.md#maxheight)
- [maxWidth](GC.Spread.Sheets.Designer.ICommand.md#maxwidth)
- [needAsyncUpdate](GC.Spread.Sheets.Designer.ICommand.md#needasyncupdate)
- [showDropdownButton](GC.Spread.Sheets.Designer.ICommand.md#showdropdownbutton)
- [subCommands](GC.Spread.Sheets.Designer.ICommand.md#subcommands)
- [text](GC.Spread.Sheets.Designer.ICommand.md#text)
- [textBoxHeight](GC.Spread.Sheets.Designer.ICommand.md#textboxheight)
- [textBoxWidth](GC.Spread.Sheets.Designer.ICommand.md#textboxwidth)
- [title](GC.Spread.Sheets.Designer.ICommand.md#title)
- [type](GC.Spread.Sheets.Designer.ICommand.md#type)
- [visibleContext](GC.Spread.Sheets.Designer.ICommand.md#visiblecontext)
- [visiblePriority](GC.Spread.Sheets.Designer.ICommand.md#visiblepriority)

### Methods

- [execute](GC.Spread.Sheets.Designer.ICommand.md#execute)
- [getState](GC.Spread.Sheets.Designer.ICommand.md#getstate)
- [init](GC.Spread.Sheets.Designer.ICommand.md#init)

## Properties

### <a id="bigbutton" name="bigbutton"></a> bigButton

• `Optional` **bigButton**: `string` \| `boolean`

___

### <a id="comboheight" name="comboheight"></a> comboHeight

• `Optional` **comboHeight**: `number`

___

### <a id="combowidth" name="combowidth"></a> comboWidth

• `Optional` **comboWidth**: `number`

___

### <a id="commandmap" name="commandmap"></a> commandMap

• `Optional` **commandMap**: `Object`

___

### <a id="commandname" name="commandname"></a> commandName

• **commandName**: `string`

___

### <a id="commandoptions" name="commandoptions"></a> commandOptions

• `Optional` **commandOptions**: `any`

___

### <a id="direction" name="direction"></a> direction

• `Optional` **direction**: `string`

___

### <a id="dropdownlist" name="dropdownlist"></a> dropdownList

• `Optional` **dropdownList**: [`IListGroupItemData`](GC.Spread.Sheets.Designer.IListGroupItemData.md)[]

___

### <a id="dropdownmaxheight" name="dropdownmaxheight"></a> dropdownMaxHeight

• `Optional` **dropdownMaxHeight**: `number`

___

### <a id="dropdownmaxwidth" name="dropdownmaxwidth"></a> dropdownMaxWidth

• `Optional` **dropdownMaxWidth**: `number`

___

### <a id="enablecontext" name="enablecontext"></a> enableContext

• `Optional` **enableContext**: `string`

___

### <a id="group" name="group"></a> group

• `Optional` **group**: `string`

___

### <a id="hidden" name="hidden"></a> hidden

• `Optional` **hidden**: `boolean`

___

### <a id="iconclass" name="iconclass"></a> iconClass

• `Optional` **iconClass**: `string`

___

### <a id="iconheight" name="iconheight"></a> iconHeight

• `Optional` **iconHeight**: `number`

___

### <a id="iconwidth" name="iconwidth"></a> iconWidth

• `Optional` **iconWidth**: `number`

___

### <a id="isgroupitem" name="isgroupitem"></a> isGroupItem

• `Optional` **isGroupItem**: `boolean`

___

### <a id="keepfocusinspread" name="keepfocusinspread"></a> keepFocusInSpread

• `Optional` **keepFocusInSpread**: `boolean`

___

### <a id="listcontent" name="listcontent"></a> listContent

• `Optional` **listContent**: [`IListGroupItemData`](GC.Spread.Sheets.Designer.IListGroupItemData.md)[]

___

### <a id="maxheight" name="maxheight"></a> maxHeight

• `Optional` **maxHeight**: `number`

___

### <a id="maxwidth" name="maxwidth"></a> maxWidth

• `Optional` **maxWidth**: `number`

___

### <a id="needasyncupdate" name="needasyncupdate"></a> needAsyncUpdate

• `Optional` **needAsyncUpdate**: `boolean`

___

### <a id="showdropdownbutton" name="showdropdownbutton"></a> showDropdownButton

• `Optional` **showDropdownButton**: `boolean`

___

### <a id="subcommands" name="subcommands"></a> subCommands

• `Optional` **subCommands**: `string`[]

___

### <a id="text" name="text"></a> text

• `Optional` **text**: `string`

___

### <a id="textboxheight" name="textboxheight"></a> textBoxHeight

• `Optional` **textBoxHeight**: `number`

___

### <a id="textboxwidth" name="textboxwidth"></a> textBoxWidth

• `Optional` **textBoxWidth**: `number`

___

### <a id="title" name="title"></a> title

• `Optional` **title**: `string`

___

### <a id="type" name="type"></a> type

• `Optional` **type**: `string`

___

### <a id="visiblecontext" name="visiblecontext"></a> visibleContext

• `Optional` **visibleContext**: `string`

___

### <a id="visiblepriority" name="visiblepriority"></a> visiblePriority

• `Optional` **visiblePriority**: `number`

## Methods

### <a id="execute" name="execute"></a> execute

▸ `Optional` **execute**(`context`, `propertyName?`, `value?`): `void`

执行命令逻辑。context 为 Designer 实例，propertyName 标识触发来源，value 为输入值。

#### Parameters

| Name | Type |
| :------ | :------ |
| `context` | [`Designer`](../classes/GC.Spread.Sheets.Designer.Designer.md) |
| `propertyName?` | `string` |
| `value?` | `any` |

#### Returns

`void`

___

### <a id="getstate" name="getstate"></a> getState

▸ `Optional` **getState**(`context`): `any`

获取命令的当前状态。context 参数为 Designer 实例。返回一个包含命令当前状态的对象（例如值、是否启用、是否可见）。

#### Parameters

| Name | Type |
| :------ | :------ |
| `context` | [`Designer`](../classes/GC.Spread.Sheets.Designer.Designer.md) |

#### Returns

`any`

___

### <a id="init" name="init"></a> init

▸ `Optional` **init**(`context`): `void`

命令首次加载时进行初始化。在命令注册期间仅调用一次。用于设置事件监听器或注册操作。

#### Parameters

| Name | Type |
| :------ | :------ |
| `context` | [`Designer`](../classes/GC.Spread.Sheets.Designer.Designer.md) |

#### Returns

`void`
